--- a/config-step-4-build-and-push/build.yml
+++ b/config-step-4-build-and-push/build.yml
@@ -11,5 +11,5 @@ sources:
 apiVersion: kbld.k14s.io/v1alpha1
 kind: Config
 destinations:
-- image: docker.io/dkalinin/k8s-simple-app
+- image: us-central1-docker.pkg.dev/halogen-proxy-337309/argocddemo
   newImage: #@ data.values.push_images_repo
